# MemSim

./: .gitignore  CMakeLists.txt  CMakePresets.json  PRD.md  README.md
qml/: MainWindow.qml  main.qml
qml/components/: AddressRuler.qml  ComparisonTable.qml  EventLogPanel.qml  FragmentationPanel.qml  MemoryBlockRect.qml  MemoryMapView.qml  MetricBar.qml  NextFitCursor.qml  Sidebar.qml  StatsCard.qml
qml/dialogs/: AllocateDialog.qml  DeallocateDialog.qml
qml/pages/: AllAlgorithmsPage.qml  ComparativePage.qml  EventLogPage.qml  SimulationPage.qml  StressTestPage.qml
qml/style/: AppStyle.qml  Theme.qml  qmldir
resources/: qml.qrc
src/: main.cpp
src/algorithms/: AlgorithmEngine.cpp  AlgorithmEngine.h  AlgorithmFactory.h  BestFit.cpp  BestFit.h  FirstFit.cpp  FirstFit.h  IAllocationStrategy.h  NextFit.cpp  NextFit.h  WorstFit.cpp  WorstFit.h
src/controller/: ComparativeAnalyser.cpp  ComparativeAnalyser.h  ExportManager.cpp  ExportManager.h  SimulationController.cpp  SimulationController.h  StressTestEngine.cpp  StressTestEngine.h
src/core/: AllocationRequest.h  AllocationResult.h  FragmentationReport.h  MemoryBlock.cpp  MemoryBlock.h  MemoryPool.cpp  MemoryPool.h  SimEvent.h  StressTestResult.h
src/models/: EventLogModel.cpp  EventLogModel.h  MemoryTableModel.cpp  MemoryTableModel.h
tests/: CMakeLists.txt  test_bestfit.cpp  test_coalescing.cpp  test_common.h  test_firstfit.cpp  test_fragmentation.cpp  test_nextfit.cpp  test_splitting.cpp  test_worstfit.cpp
